--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,5 +51,6 @@ jobs:
         username: ${{ secrets.SSH_ID }}
         key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script_stop: true
         script: "./startup.sh"
