--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,9 @@
-server:
-  port: 8090
-
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://133.186.151.141:3306/booklay_shop?serverTimezone=Asia/Seoul
-    username: booklay
-    password: _nys_6*0osSnt5Pa
+  application:
+    name: booklay-coupon
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-    database: mysql
+  profiles:
+    active: dev
+
+  config:
+    import: "optional:configserver:http://133.186.218.11:8888"
