--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,11 @@ spring:
 
   config:
     import: "optional:configserver:http://133.186.218.11:8888"
+  kafka:
+    consumer:
+      group-id: consumer
+    bootstrap-servers: localhost:9092
+
+message:
+  topic:
+    name: quickstart-events
