--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: booklay-coupon
 
-  profiles:
-    active: dev
+#  profiles:
+#    active: dev
 
   config:
     import: "optional:configserver:http://133.186.218.11:8888"
@@ -15,3 +15,6 @@ spring:
 message:
   topic:
     name: quickstart-events
+
+server:
+  port: 8090
