--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,14 +7,10 @@ spring:
 
   config:
     import: "optional:configserver:http://133.186.218.11:8888"
-  kafka:
-    consumer:
-      group-id: consumer
-    bootstrap-servers: localhost:9092
 
-message:
-  topic:
-    name: quickstart-events
+#message:
+#  topic:
+#    name: quickstart-events
 
 server:
   port: 8090
