fix: logging level

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,14 @@ spring:
   application:
     name: booklay-coupon
 
-#  profiles:
-#    active: dev
-
   config:
     import: "optional:configserver:http://133.186.218.11:8888"
-  kafka:
-    consumer:
-      group-id: consumer
-    bootstrap-servers: localhost:9092
-
-message:
-  topic:
-    name: quickstart-events
 
 server:
   port: 8090
+
+logging:
+  level:
+    root: debug
+
+
