--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,11 +6,12 @@ spring:
     console:
       enabled: true
 
-  datasource:
+    datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: sa
     password:
+
 
   jpa:
     show-sql: true
@@ -21,6 +22,9 @@ spring:
         globally_quoted_identifiers: true
         dialect: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
+  kafka:
+    consumer:
+      group-id: coupon-test
 
 cloud:
   auth-url: https://api-identity.infrastructure.cloud.toast.com/v2.0
