--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -49,3 +49,7 @@ message:
     coupon:
       request: coupon-zone-request
       response: coupon-zone-response
+
+coupon:
+  welcome:
+    couponId: 1
